Omits unnecessary object creation